@@ -63,5 +63,7 @@ wubi (9.04) UNRELEASED; urgency=low
   * Added preliminary code to generate virtual disk files, to be completed
   * Added timezone detection
   * Allocate disk space for virtual disks, to be tested
+  * Added wubizip compilation mode, to create a debugger friendly
+    environment
 
- -- Agostino Russo <agostino.russo@gmail.com>  Wed, 07 Jan 2009 01:57:47 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Wed, 07 Jan 2009 10:13:08 +0000
